Fixed scrollbar and footer

--- a/src/Components/Match/MatchQuestions.css
+++ b/src/Components/Match/MatchQuestions.css
@@ -8,7 +8,6 @@
 body, html {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   font-family: 'Space Grotesk', sans-serif;
 }
 
